--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   
@@ -37,8 +36,8 @@
 	</div>
 	
 	<div class="mt-4">
-		<div class="alert alert-warning">
-			<strong>Warning!</strong> Calculation is based on the average reading speed that around 200 words per minute (wpm).
+		<div class="alert alert-info">
+			<strong>Info!</strong> Calculation is based on the average reading speed that around 200 words per minute (wpm).
 		</div>
 	<div>
 </div>
